# DenseCore

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  SECURITY.md  benchmark.py  docker-compose.yml  go.mod  run_benchmarks.sh  test_cpp_engine.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml  model_issue.yml
.github/workflows/: README.md  apple-silicon.yml  ci.yml  docker.yml  docs.yml  helm-publish.yml  lint.yml  pypi-publish.yml  release.yml
benchmarks/: benchmark_throughput.py
charts/densecore/: Chart.yaml  README.md  values.yaml
charts/densecore/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  keda-scaledobject.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
core/: CMakeLists.txt  build_log.txt
core/docs/: int4_inference_integration.md
core/examples/: gemm_int4_example.cpp  int4_usage_example.cpp
core/include/: accelerator_traits.h  aligned_allocator.h  ane_backend.h  apple_silicon.h  async_backend.h  async_cpu_backend.h  backend_registry.h  block_allocator.h  compute_backend.h  cpu_backend.h  densecore.h  densecore_version.h  embedding.h  flash_attention.h  hardware_topology.h  hybrid_scheduler.h  inference.h  kernel_context.h  kv_block_manager.h  kv_cache.h  lockfree_queue.h  memory_pool.h  metal_backend.h  model_loader.h  model_types.h  numa_allocator.h  operation_graph.h  optimization_bridge.h  pruner.h  pruning_config.h  quantization_config.h  quantized_tensor.h  quantizer.h  save_model.h  scheduler.h  simd_ops.h  simd_platform.h  tensor.h  tensor_utils.h  tensor_view.h  (+2 more)
core/include/densecore/hal/: backend_registry.h  compute_backend.h  macros.h  tensor.h
core/include/kernels/: cpu_int4.h  cpu_kernels.h
core/include/quantization/: int4_types.h
core/include/utils/: error.h  logging.h  raii_guards.h
core/shaders/: flash_attention.metal  gemv.metal  quantized_gemm.metal  quantized_gemv.metal
core/src/: ane_backend.mm  apple_silicon.mm  async_cpu_backend.cpp  backend_registry.cpp  cpu_backend.cpp  cpu_backend_opt.cpp  embedding.cpp  engine.cpp  engine_internal.h  hybrid_scheduler.mm  inference.cpp  kernel_context.cpp  kv_cache.cpp  metal_backend.mm  model_loader.cpp  model_types.cpp  optimization_bridge.cpp  pruner.cpp  quantize.cpp  quantizer.cpp  save_model.cpp  scheduler.cpp  simd_ops.cpp  tensor_utils.cpp  tokenizer.cpp  version.cpp  worker.cpp
core/src/kernels/: cpu_amx.cpp  cpu_int4.cpp  cpu_int4_avx512.cpp
core/src/pruning/: attention_pruner.cpp  attention_pruner.h  combined_pruner.cpp  combined_pruner.h  depth_pruner.cpp  depth_pruner.h  width_pruner.cpp  width_pruner.h
core/src/quantization/: awq_quantizer.cpp  awq_quantizer.h  int4_quantizer.cpp  int4_quantizer.h  max_quantizer.cpp  max_quantizer.h  smoothquant_quantizer.cpp  smoothquant_quantizer.h
core/src/utils/: raii_guards.h
core/tests/: test_aligned_allocator.cpp  test_async_backend.cpp  test_cpu_int4.cpp  test_kernel_context.cpp  test_kv_cache.cpp  test_memory_pool.cpp  test_simd_ops.cpp  test_tensor_view.cpp
docs/: API_REFERENCE.md  APPLE_SILICON.md  ARCHITECTURE.md  BENCHMARKS.md  CLI.md  CLOUD_NATIVE.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  HF_TO_GGUF.md  INT4_QUANTIZATION.md  MODEL_OPTIMIZATION.md  NUMA_OPTIMIZATION.md  README - 복사본.md  README.md
grafana/: densecore-dashboard.json
kubernetes/: Dockerfile.downloader  README.md  configmap.yaml  deployment.yaml  download_model.py  hpa.yaml  ingress.yaml  keda-scaledobject.yaml  kustomization.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
kubernetes/chart/: Chart.yaml  values.yaml
kubernetes/chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  keda-scaledobject.yaml  pvc.yaml
prometheus/: alerts.yml  prometheus.yml
proto/: densecore.proto
python/: MANIFEST.in  README.md  benchmark_fixed.py  benchmark_inference.py  pyproject.toml  setup.py  test_quality.py  test_quantization.py
python/densecore/: __init__.py  auto.py  config.py  convert.py  embedding.py  engine.py  exceptions.py  generate_output.py  hub.py  lora.py  smart_loader.py
python/densecore/integrations/: __init__.py  langchain.py  langgraph_tools.py
python/densecore/prune/: __init__.py
python/densecore/quantize/: __init__.py
python/docs/: LANGCHAIN_GUIDE.md  README_LANGCHAIN_SECTION.md
python/examples/: langchain_example.py  langgraph_example.py  lora_and_smart_loading.py  production_rag.py
python/tests/: test_auto.py  test_densecore.py  test_hf_compat.py  test_langchain_integration.py  test_langgraph_integration.py  test_smart_loader.py
scripts/: compile_transformer_layer.py  entrypoint.sh
server/: .golangci.yml  go.mod  go.sum  main.go  openapi.yaml
server/cmd/densecore/: main.go
server/cmd/densecore/cmd/: root.go  run.go  serve.go
server/internal/api/: handlers.go  handlers_test.go
server/internal/config/: config.go
server/internal/domain/: errors.go  interfaces.go  types.go
server/internal/engine/: callbacks.go  cpu_config.go  engine.go
server/internal/middleware/: auth.go  logger.go  middleware.go  middleware_test.go  redis_keystore.go  redis_ratelimit.go  tracing.go  validation.go
server/internal/queue/: request_queue.go
server/internal/server/: server.go
server/internal/service/: chat_service.go  model_service.go  worker_pool.go
